properly check context before accessing it

BUG: 295866